--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<title> hi </title>
+<title>Smart Charity - Novel Charity procedure </title>
 <body>
-<h1> this is test page</h1>
+<h1> Smart Charity - </h1>
 </body>
 </html>
